# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPLv2

  11 Mar 2006; Roy Marples <uberlord@gentoo.org>:

    ifconfig fixes routes to ifaces, #125786 thanks to Jason Stubbs.

  12 Feb 2006; Roy Marples <uberlord@gentoo.org>:

    Fix udhcpc+ifconfig combo bug, #112521 thanks to magan.

  25 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Fix ADSL module stopping, #120135.

  20 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Backport udev causing init scripts to start too early, #118419.

  04 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Backport wpa_supplicant fix for bash-3.1.

  28 Nov 2005; Roy Marples <uberlord@gentoo.org>:

    init.d/service stop now returns 0 even if it's already started, #107930.

  08 Nov 2005; Roy Marples <uberlord@gentoo.org>:

    punted serial from rc-lists/boot as it's no longer provided by baselayout

  08 Nov 2005; Martin Schlemmer <azarah@gentoo.org>:

    Backport changes needed for udev/devfs addons.

  13 Sep 2005; Roy Marples <uberlord@gentoo.org>:

    Changed net.lo depend from isdn4linux to isdn, #102846

  20 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    Removed trailing tab from local.start - fixes #99624

  18 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    Changed wpa-supplicant to wpa_supplicant when reporting that it is not
    instaled. Fixes #99381

  15 Jul 2005; Martin Schlemmer <azarah@gentoo.org>:

    Do not run depmod in modules-update if System.map is missing, bug #59188.

* rc-scripts-1.6.13 (13 Jul 2005)

  12 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    Added dhcp_eth0="nogateway" option, generic to all dhcp clients.
    Fixes #98466

  11 Jul 2005; Martin Schlemmer <azarah@gentoo.org>:

    Add fix -r to unmount to be -n .. bug #98667, thanks to Patrick McLean.

  11 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    udhcpc/dhclient helpers no longer flush IPv6 addresses - fixes #98539
