@@ -546,6 +546,16 @@ else
 	else
 		# Non-normal runlevels don't include boot scripts as default
 		mylevels="$(dolisting "/etc/runlevels/${SOFTLEVEL}/")"
+
+		# As we're in the bootlevel, add any services that failed due
+		# to /dev/.rcsysinit existing to the list
+		if [[ -d /dev/.rcboot ]] ; then
+			for x in $(dolisting /dev/.rcboot/) ; do
+				[[ -L ${x} ]] && myscripts="${myscripts} ${x##*/}"
+			done
+			einfo "Device initiated services:${HILITE}${myscripts}${NORMAL}"
+			rm -rf /dev/.rcboot
+		fi
 	fi
 	
 	[ "${OLDSOFTLEVEL}" = "${BOOTLEVEL}" -o "${OLDSOFTLEVEL}" = "single" ] \
