@@ -30,12 +30,17 @@ myservice=${myservice##*/}
 export SVCNAME=${myservice}
 mylevel=$(<"${svcdir}/softlevel")
 
-# Stop init scripts from working until sysinit completes
+# coldplug events can trigger init scripts, but we don't want to run them
+# until after rc sysinit has completed so we punt them to the boot runlevel
 if [[ -e /dev/.rcsysinit ]] ; then
-    eerror "ERROR:  cannot run ${myservice} until sysinit completes"
-    exit 1
+	eerror "ERROR:  cannot run ${SVCNAME} until sysinit completes"
+	eerror "${SVCNAME} will be started in the ${BOOTLEVEL} runlevel"
+	if [[ ! -L /dev/.rcboot/"${SVCNAME}" ]] ; then
+		[[ ! -d /dev/.rcboot ]] && mkdir /dev/.rcboot
+		ln -snf "$1" /dev/.rcboot/"${SVCNAME}"
+	fi
+	exit 1
 fi
-
 
 # Set $IFACE to the name of the network interface if it is a 'net.*' script
 if [[ ${myservice%%.*} == "net" ]] && [[ ${myservice##*.} != ${myservice} ]] ; then
